Fix overlapping marzipano info with edit node button

--- a/client/src/sass/partials/_marzipanoInfo.scss
+++ b/client/src/sass/partials/_marzipanoInfo.scss
@@ -2,8 +2,8 @@
 
 .marzipano-info {
   position: absolute;
-  right: 4rem;
-  top: 4rem;
+  right: 8rem;
+  top: 5rem;
   margin-left: 1.5em;
   margin-top: 1.5em;
   z-index: 2;
